ingress/three-tier-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: three-tier-ingress
  namespace: three-tier
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  ingressClassName: alb
  rules:
    - http:   # Ensure this is inside a list
        paths:
          - path: /backend
            pathType: Prefix
            backend:
              service:
                name: backend-service  # Ensure correct service name
                port:
                  number: 3500
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service  # Ensure correct service name
                port:
                  number: 3000
